fix svg width of article link on firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -212,6 +212,7 @@ table.rocketLaunchesTable {
         align-items: center;
 
         svg {
+          width: 1.3em;
           height: 1.3em;
 
           path {
